# OTB

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgsigs  .mailmap  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  ChangeLog-DATA  ConfigureMonteverdi.h.in  ConfigureMonteverdi2.h.in  Copyright.txt  DartConfig.cmake  Description.txt  FindGLEW.cmake  NOTICE  OTBBuildSettings.cmake  OTBConfig.cmake.in  OTBLibraryDepends.cmake  PSC.md  README  README.md  README.txt  RELEASE_NOTES.txt  RELEASE_NOTES_MVD.txt  ReadMe  TODO  TODO.org  UseOTB.cmake.in  VERSION  mapnikFromVectorData.cxx  mapnikOTBClasses.cxx  myOwnMapnik.cpp  myOwnMapnik.cxx  osmStyleXMLParser.py  (+30 more)
Application/: CMakeLists.txt  otbAvirisBandSelection.cxx  otbEndmembersSubset.cxx  otbHyperspectralCompare.cxx  otbHyperspectralRecompose.cxx  otbHyperspectralUnmixing.cxx  otbIce.cxx  otbIceViewer.cxx  otbIceViewer.h
Applications/: CMakeLists.txt  VectorImageFactory.cxx  otbRescale.cxx
Applications/CartographicDBValidation/: CMakeLists.txt  otbComputePolylineFeatureFromImage.cxx  otbDSFuzzyModelEstimation.cxx  otbVectorDataDSValidation.cxx
Applications/ChangeDetection/: CMakeLists.txt  otbMultivariateAlterationDetector.cxx
Applications/Classification/: CMakeLists.txt  otbClassificationMapRegularization.cxx  otbClassificationRegularisationMajorityVoting.cxx  otbComputeConfusionMatrix.cxx  otbComputeImagesStatistics.cxx  otbComputeOGRLayersFeaturesStatistics.cxx  otbEstimateImagesStatistics.cxx  otbFusionOfClassifications.cxx  otbImageClassifier.cxx  otbImageSVMClassifier.cxx  otbKMeansClassification.cxx  otbLabeledImageColorMapping.cxx  otbOGRLayerClassifier.cxx  otbTrainKNN.cxx  (+17 more)
Code/: CMakeLists.txt  otbFragmentShader.cxx  otbFragmentShader.h  otbFragmentShaderRegistry.cxx  otbGeoInterface.cxx  otbGlActor.cxx  otbGlActor.h  otbGlImageActor.cxx  otbGlImageActor.h  otbGlROIActor.cxx  otbGlROIActor.h  otbGlVectorActor.cxx  otbGlVectorActor.h  otbGlVersionChecker.cxx  otbGlVersionChecker.h  otbGlView.cxx  otbGlView.h  otbNonOptGlImageActor.cxx  otbNonOptGlImageActor.h  otbStandardShader.cxx  otbStandardShader.h  otbViewSettings.cxx  otbViewSettings.h
Data/: CMakeLists.txt  README-OTB-Data  monteverdi2.desktop  mvd2-catalogue.desktop  mvd2-viewer.desktop
Example/: CMakeLists.txt  otbAddition.cxx  otbAddition.h  otbAdditionQt.cxx  otbAllocateOutput.cxx  otbCopyInput.cxx  otbExtractROI.cxx  otbHyperspectralUnmixing.cxx  otbInternalReader.cxx  otbRescale.cxx  otbSmoothing.cxx  otbTestApplication.cxx
Examples/: CMakeLists.txt  README.txt  cmake_install.cmake
Packaging/: CMakeLists.txt  CTestConfig.cmake  External_patchelf.cmake  LICENSE  PackageGlobals.cmake  README.md  __meta__.py  __meta__.py.in  add_uninstall_otb_script.cmake  add_uninstall_script.cmake  check_cmake_variables.cmake  cleanup_package.cmake  clear_cmakecache_variables.cmake  configure_loader.cmake  create_package.cmake  detect_using_file_command.cmake  get_variables_ending_with.cmake  howto_update_makeself  install_cmake_files.cmake  install_importlibs.cmake  install_include_dirs.cmake  install_java_bindings.cmake  install_mvd_files.cmake  install_otbapp_wrapper_scripts.cmake  install_python_bindings.cmake  install_qgis_bindings.cmake  install_qtdev_files.cmake  install_rule.cmake  install_script_files.cmake  install_share_dirs.cmake  install_staticlib_files.cmake  install_vstudio_files.cmake  install_without_message.cmake  installer_files.cmake  isfile_symlink.cmake  mapla.bat  mapla.sh  monteverdi.sh  otb_update_makeself  otbenv.cmd  (+11 more)
SoftwareGuide/: CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  LaTeXWrapper.sh.in  ParseCxxExamples.pl  SoftwareGuideConfiguration.tex  SoftwareGuideConfiguration.tex.in  Tex4htWrapper.sh.in  cmake_install.cmake  generate_FAQ.sh.in
Sql/: CMakeLists.txt  sql_create_db.sql  sql_db_create.sql  sql_db_setup.sql  sql_insert_items.sql  sql_queries.sql  sql_queries_insert.sql  sql_queries_pool.sql  sql_queries_select.sql  sql_sample.sql
SuperBuild/: CMakeLists.txt  CTestConfig.cmake  README.md
Superbuild/: CMakeLists.txt
Testing/: CMakeLists.txt  CMakeLists.txt~  CTestConfig.cmake  LocalRxDetectorRoiTest.cxx  LocalRxDetectorTest.cxx  TestingHelper.cmake  otbAngularProjectionBinaryImageFilter.cxx  otbAnomalyTests1.cxx  otbCLSPSTOUnmixingImageFilter.cxx  otbCublasStreamingStatisticsVectorImageFilter.cxx  otbCudaFCLSImageFilter.cxx  otbEigenvalueLikelihoodMaximization.cxx  otbFCLSUnmixingImageFilter.cxx  otbFastICAImageFilter.cxx  otbFullyConstrainedLeastSquareImageFilter.cxx  otbHyperCublasTests1.cxx  otbHyperTests1.cxx  otbISRAUnmixingImageFilter.cxx  otbMNFImageFilter.cxx  otbMatrixMultiplyImageFilter.cxx  otbNCLSUnmixingImageFilter.cxx  otbPCAImageFilter.cxx  otbProjectiveProjection.cxx  otbSparseUnmixingImageFilter.cxx  otbSparseWvltToAngleMapperListFilter.cxx  otbStreamingStatisticsVectorImageFilter.cxx  otbStreamingStatisticsVectorImageFilter2.cxx  otbUnConstrainedLeastSquareImageFilter.cxx  otbVCA.cxx  otbVCAImageFilter.cxx  otbVectorImageToMatrixImageFilter.cxx  otbWrapperApplicationTest.cxx  otbWrapperEmptyParameterTest.cxx  otbWrapperNumericalParameterTest.cxx  otbWrapperParameterListTest.cxx  otbWrapperParameterTest.cxx  otbWrapperQtWidgetParameterFactory.cxx  otbWrapperQtWidgetTests.cxx  otbWrapperTests.cxx  vahineElmVCA.cxx
Utilities/: CMakeLists.txt  build_gdal_bindings.sh
Wrapping/: CMakeLists.txt  otbWrapSetup.cmake
i18n/: CMakeLists.txt  fr_FR.ts
src/: CMakeLists.txt  otbIceViewer.cxx  otbMPIConfig.cpp  otbMPIConfig.cxx
test/: CMakeLists.txt  CVF.cpp  CostVolumeFilter.cpp  Occlusions.cpp  PatchMatch.cpp  cvf.cpp  otbCVFFiltersTestDriver.cxx  otbMPIBundleToPerfectSensorTest.cxx  otbMPIEmptyTest.cxx  otbMPIHelloTest.cxx  otbMPIModuleTestDriver.cxx  otbMPIReadWriteTest.cxx  otbMPISPTWReadWriteTest.cxx  otbReadWriteTest.cxx  otbStereoFiltersTestDriver.cxx  testAllFilters.cpp  testCostVolumeFilters.cpp  testDisparityMap.cpp  testFillOcclusionsFilter.cpp  testGuidedFilter.cpp  testOcclusions.cpp  testOcclusionsDetectionFilter.cpp
(+31168 files in other folders)
