cmake_minimum_required(VERSION 2.8.9)
cmake_policy(SET CMP0046 NEW)
project(MPIModule)
set(MPIModule_LIBRARIES MPIModule)

if(NOT OTB_SOURCE_DIR)
    find_package(OTB REQUIRED)
    set(OTB_CMAKE_DIR /work/hpc/sarrazie/otb/OTB-develop/CMake/)
    set(OTB_SOURCE_DIR /work/hpc/sarrazie/otb/OTB-develop/)
    list(APPEND CMAKE_MODULE_PATH ${OTB_CMAKE_DIR})
    include(OTBModuleExternal)
  else()
    otb_module_impl()
  endif()

