ADD_EXECUTABLE(otbIce otbIce.cxx otbIceViewer.cxx)
TARGET_LINK_LIBRARIES(otbIce OTBIce ${GLFW_LIBRARY} ${GLUT_LIBRARY})

install(TARGETS otbIce
        RUNTIME DESTINATION ${Ice_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
        LIBRARY DESTINATION ${Ice_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
        ARCHIVE DESTINATION ${Ice_INSTALL_LIB_DIR} COMPONENT Development)
