ADD_LIBRARY(IceViewer otbIceViewer.cxx)
TARGET_LINK_LIBRARIES(IceViewer OTBIce ${GLFW_LIBRARY} ${GLUT_LIBRARY})

file(GLOB hdrs "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

SET_TARGET_PROPERTIES(IceViewer PROPERTIES ${Ice_LIBRARY_PROPERTIES})

ADD_EXECUTABLE(otbiceviewer otbIce.cxx)
TARGET_LINK_LIBRARIES(otbiceviewer IceViewer)

install(TARGETS IceViewer
        RUNTIME DESTINATION ${Ice_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
        LIBRARY DESTINATION ${Ice_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
        ARCHIVE DESTINATION ${Ice_INSTALL_LIB_DIR} COMPONENT Development)

install(TARGETS otbiceviewer
        RUNTIME DESTINATION ${Ice_INSTALL_BIN_DIR} COMPONENT Runtime
        LIBRARY DESTINATION ${Ice_INSTALL_LIB_DIR} COMPONENT Runtime
        ARCHIVE DESTINATION ${Ice_INSTALL_LIB_DIR} COMPONENT Development)

# Install headers
install(FILES ${hdrs}
  DESTINATION ${Ice_INSTALL_INCLUDE_DIR}/
  COMPONENT Development)
