add_subdirectory(UtilitiesAdapters)
add_subdirectory(Common)
add_subdirectory(BasicFilters)
add_subdirectory(IO)
add_subdirectory(ChangeDetection)
add_subdirectory(FeatureExtraction)
add_subdirectory(Learning)
add_subdirectory(MultiScale)
add_subdirectory(DisparityMap)
add_subdirectory(SpatialReasoning)
add_subdirectory(Projections)
add_subdirectory(Radiometry)
add_subdirectory(Fusion)
add_subdirectory(Markov)
add_subdirectory(SARPolarimetry)
add_subdirectory(Testing)
add_subdirectory(OBIA)
add_subdirectory(ObjectDetection)
add_subdirectory(Fuzzy)
add_subdirectory(MultiTemporal)
add_subdirectory(Simulation)
add_subdirectory(Hyperspectral)
add_subdirectory(Segmentation)

if(OTB_USE_VISU_GUI)
        add_subdirectory(Visu)
        add_subdirectory(Gui)
        add_subdirectory(Visualization)
endif(OTB_USE_VISU_GUI)

if(OTB_USE_PQXX)
        add_subdirectory(GeospatialAnalysis)
endif(OTB_USE_PQXX)

if(BUILD_APPLICATIONS)
  add_subdirectory(ApplicationEngine)
  add_subdirectory(Wrappers)
endif(BUILD_APPLICATIONS)

if(OTB_COMPILE_WITH_FULL_WARNING)
  if(CMAKE_COMPILER_IS_GNUCXX)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OTB_FULL_WARNING_LIST_PARAMETERS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OTB_FULL_WARNING_LIST_PARAMETERS}")
  endif(CMAKE_COMPILER_IS_GNUCXX)
endif(OTB_COMPILE_WITH_FULL_WARNING)
