file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")
file(GLOB hdrs "${CMAKE_CURRENT_SOURCE_DIR}/*.h")


ADD_LIBRARY(OTBIce ${srcs})
TARGET_LINK_LIBRARIES(OTBIce OTBIO ${OPENGL_LIBRARY} ${GLEW_LIBRARY})

set_target_properties(OTBIce
  PROPERTIES ${Ice_LIBRARY_PROPERTIES}
)

# Install library
install(
  TARGETS OTBIce
  RUNTIME DESTINATION ${Ice_INSTALL_BIN_DIR} COMPONENT Runtime
  LIBRARY DESTINATION ${Ice_INSTALL_LIB_DIR} COMPONENT Runtime
  ARCHIVE DESTINATION ${Ice_INSTALL_LIB_DIR} COMPONENT Development
)

# Install headers
install(FILES ${hdrs}
  DESTINATION ${Ice_INSTALL_INCLUDE_DIR}/
  COMPONENT Development)

